feat(back-JobContract): Interface + DTOs + Schema
feat(back-JobContract): create jobContractProposalRoute

feat(back-JobContract): validate job proposal

feat(back-JobContract): start signing

WIP: call with Kony

WIP(back-JobContract): sign JobProposal

feat(back-JobContract): send signed object to employer

feat(back-JobContract): check on bc if new contract is in

wip


WIP: add seed.json


wip: file finalization


wip: file upload 2


wip


wip


wip: upload file


wip: disable jest


wip remove import


1


wip 2


.


test


a


remove sdk


ilport


feat: upload file done


+1

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,7 @@ SYNAPS_CLIENT_ID=""
 SYNAPS_API_KEY=""
 SYNAPS_API_BASE_URL='https://individual-api.synaps.io/v3'
 SYNAPS_WEBHOOK_SECRET=""
+
+# API
+RPC_URL='RPC_URL'
+CONTRACT_ADDRESS='CONTRACT_ADDRESS'
