--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "ddb:gen": "ts-node gen-ddb-resource.ts -- \"packages/api/src/**/*.schema.ts\" \"packages/api/resource/dynamodb.yml\"",
     "ddb:dev": "serverless dynamodb start",
-    "sls:dev": "serverless offline start --noPrependStageInUrl",
+    "sls:dev": "serverless offline start --noPrependStageInUrl & dynamodb-admin",
+    "sls:dev:jack": "aws-vault exec workagora -- serverless offline start & dynamodb-admin",
     "build": "tsc -p packages/api",
     "start:dev": "nodemon packages/api/src/main.ts",
     "start": "ts-node packages/api/src/main.ts"
@@ -47,6 +48,7 @@
     "@types/jest": "^29.4.0",
     "@types/js-cookie": "^3.0.3",
     "@types/js-yaml": "^4.0.5",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -109,11 +111,14 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.4.2",
     "@nestjs/platform-socket.io": "^9.4.2",
+    "@nestjs/schedule": "^2.2.2",
     "@nestjs/swagger": "^6.3.0",
     "@nestjs/websockets": "^9.4.2",
     "@rainbow-me/rainbowkit": "^0.12.12",
     "@synaps-io/react-verify": "^1.0.3",
+    "@types/express": "^4.17.17",
     "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1390.0",
     "aws-serverless-express": "^3.4.0",
     "axios": "^1.4.0",
     "chakra-dayzed-datepicker": "^0.2.8",
@@ -131,6 +136,7 @@
     "joi": "^17.9.2",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "multer": "1.4.3",
     "nestjs-dynamoose": "^0.5.4",
     "next": "13.3.0",
     "next-auth": "^4.22.1",
